--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -214,10 +214,10 @@ spring:
   redis:
     # redis数据库索引(默认为0)
     database: 0
-    host: cloud-redis
+    host: 106.53.46.92
     port: 6379
     timeout: 5000
-    password: "sandbox"
+    password: "fooroot"
     jedis:
       pool:
         max-active: 8
