理解 application.yaml 中spring.profiles.active=dev 的机制: 应该分开文件，不放在同一个文件配置

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,37 +1,220 @@
+
 ---
 spring:
-  profiles: standalone
   datasource:
-    url: jdbc:mysql://mysqlserver:3306/test?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: root
+    url: jdbc:mysql://sh-cynosdbmysql-grp-mlyunquo.sql.tencentcdb.com:25133/study_power?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
+    username: zb2014
+    password: zb2014@8888
     driver-class-name: com.mysql.cj.jdbc.Driver
-    filters: log4j,mergeStat
-    sql-script-encoding: UTF-8
-    schema: classpath*:sql/*-schema.sql
-    data: classpath*:sql/*-data.sql
-    initialize: false
-    
-logging:
-  level: debug
----
-spring:
-  profiles: test
-  datasource:
-    url: jdbc:h2:mem:test;MODE=MYSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
     filters: log4j,wall,mergeStat
     sql-script-encoding: UTF-8
-    schema: classpath*:sql/*-schema.sql
-    data: classpath*:sql/*-data.sql
-    initialize: true
-  h2:
-    console:
-      enabled: true
-      settings:
-        web-allow-others: true
-        trace: false
+    schema: classpath*:sql/**/*-schema.sql
+    data: classpath*:sql/**/*-data.sql
+    initialize: false
+  resources:
+    static-locations: file:/attachments/
+  # rabbitMQ配置
+  rabbitmq:
+    host: 202.63.172.178
+    port: 5672
+    username: guest
+    password: guest
+    connection-timeout: 5000
+  redis:
+    # redis数据库索引(默认为0)
+    database: 0
+    host: 106.53.46.92
+    port: 6379
+    timeout: 5000
+    password: "fooroot"
+    jedis:
+      pool:
+        max-active: 8
+        max-idle: 8
+        min-idle: 0
+        max-wait: -1ms
+  http:
+    multipart:
+      maxFileSize: 400MB
+      maxRequestSize: 400MB
+  kafka:
+    bootstrap-servers: kuncts35.jzymcs.cn:9092
+    producer: # producer 生产者
+      retries: 0 # 重试次数
+      acks: 1 
+      batch-size: 16384 # 批量大小
+      buffer-memory: 33554432 
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      #      value-serializer: com.itheima.demo.config.MySerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer: # consumer消费者
+      group-id: kafka-test 
+      enable-auto-commit: true 
+      auto-commit-interval: 100  
+      auto-offset-reset: latest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      #      value-deserializer: com.itheima.demo.config.MyDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  mvc:
+    static-path-pattern: /static/**
+    view:
+      prefix: /WEB-INF/view
+  mail:
+    host: smtp.126.com
+    port: 25
+    username: jiajiajia5000@126.com
+    password: CFERNTQPRZYHBRXO
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+    templates:
+      - operation: userAssetMatch
+        templateContent: '【通知】{targetBuilding}栋{targetAsset}房的户主望与您的{building}栋{asset}房交换'
+      - operation: salesAssetMatch
+        templateContent: '【通知】{targetBuilding}栋{targetAsset}房的户主与{building}栋{asset}房的户主有交换意向。{targetBuilding}栋{targetAsset}房的户主信息为:名字：{targetUserName}，电话：{targetUserPhone}。{building}栋{asset}房的户主信息为：姓名：{username},电话:{userPhone}'
+
+io:
+  # 头像配置
+  avatar-file-path: images/avatar/ # 弃用
+  avatar-export-endpoint: "http://202.189.7.191:9000"
+  default-avatar-path: images/avatar/default-avatar.png
+  file-upload-path: /webapps/images/avatar
+  file-host: images/avatar
+  file-icon-upload-path: icon
+  file-icon-host: icon
+  minio:
+    export-endpoint: "http://202.189.7.191:9000"
+    endpoint: "http://202.189.7.191:9000"
+    access-key: "admin"
+    secret-key: "jfeat.com.24"
+
+apis:
+  dosql:
+    path: apis
+
+
+  # 验证码配置
+valid-code:
+  expiration-time: 300000 # 单位毫秒
+  length: 6 # 验证码的长度
+
+# 头像配置
+avatar:
+  file-path: images/avatar/ # 弃用
+  export-endpoint: "http://202.189.7.191:9000"
+  default-avatar-path: images/avatar/default-avatar.png
+
+
+# unicom:
+#   appKey: 12E689A06DD74FF7ADFF2ED9086D6365
+#   secret: DMRsOlzthNPmvpql
+#   channel: 08-2278-acw5-afi4
+#   referrerCode: 5111946116
+
 logging:
-  level: debug  
+#  config: config/logback-spring.xml
+  logback:
+    rollingpolicy:
+      # max-file-size: 10MB
+      file-name-pattern: logs/log.%d{yyyy-MM-dd}.gz
+      max-history: 90
+  file:
+    name: logs/access.log
+  level:
+    root: INFO
+    org.springframework: ERROR
+    jdbc.connection: ERROR
+    org.apache: ERROR
+    com.alibaba: ERROR
+    com.jfeat: DEBUG
+
+domain:
+  serverName: meeting.xinzhisc.com
+
+feign:
+  client:
+    party-member-url: spbs-test.xinzhisc.com/portal
+
+# 临时id配置
+temporary-id:
+  ttl: 3000000 # 毫秒
+
+# mqtt配置
+mqtt:
+  ep: ws://0.0.0.0:8084 # 端口
+  usr: admin # 用户名
+  pw: admin # 密码
+  tp: /room-controller-exchange # 主题
+  mqtt-topic: # 多主题定义
+    Login-kick-out: login-kick-out- # 登录踢出主题
+  mqtt-cmd-config:
+    user-login-kick-out-cmd: USER_LOGIN_KICK_OUT # 用户登录踢出命令
+
+mqtt-publish:
+  brk: ws://202.63.172.178:8883 # 端口
+  usr: admin # 用户名
+  pw: admin # 密码
+  tp: /room-controller-exchange- # 主题
+  subs: # 订阅的主题列表
+    - message-center-server # 消息中心服务主题
+#    - user-meeting-heartbeat # 用户心跳主题
+
+# 短信配置
+sms:
+  # 验证码配置
+  valid-code:
+    expiration-time: 300000 # 单位毫秒
+    length: 6 # 验证码的长度
+  enable-develop-code: true
+  nameless:
+    base-url: http://47.104.197.138:8001/sms # 根路径
+    username: 960031
+    password: J4YswRt91ali
+    apis:
+      oneOnOne:
+        url: /api/sendMessageOne
+      mass:
+        url: /api/sendMessageMass
+    templates: # 模版列表
+      alterPw: # 模版key
+        name: 修改密码验证码
+        code: SMS_138535094
+        content: 【新质数创】尊敬的 ${name}${role}：您正在修改新质智慧党建系统录密码，验证码为${code}。为保护账号安全，请勿泄漏或转发他人。
+      register:
+        name: 用户注册验证码
+        code: SMS_138535095
+        content: 【新质数创】尊敬的用户：您正在注册新质智慧党建系统账号，验证码为${code}。该验证码5分钟内有效，为保护账号安全，请勿泄漏或转发他人。
+      loginUnusual:
+        name: 登录异常验证码
+        code: SMS_138535096
+        content: 【新质数创】尊敬的 ${name}${role}：您的新质智慧党建系统账号正在一个新设备上登录。验证码为${code}。如非本人登录，请尽快修改密码。
+      loginCheck:
+        name: 登录确认验证码
+        code: SMS_138535097
+        content: 【新质数创】尊敬的 ${name}${role}：您正在登录新质智慧党建系统。验证码为${code}。该验证码5分钟内有效，为保护账号安全，请勿泄漏或转发他人。
+      authentication:
+        name: 身份验证验证码
+        code: SMS_138535098
+        content: 【新质数创】尊敬的 ${name}${role}：您正在进行新质智慧党建系统身份验证。验证码为${code}。为保护账号安全，请勿泄漏或转发他人。
+      infoUpdate:
+        name: 信息变更验证码
+        code: SMS_138535093
+        content: 【新质数创】尊敬的 ${name}${role}：您正在进行新质智慧党建系统账号信息变更操作，验证码为${code}。为保护账号安全，请勿泄漏或转发他人。
+
+# 分享码配置
+share-code:
+  code-length: 6
+  code-expire-time: 10
+
+# 设备配置
+device:
+  activate-code-length: 4 # 设备激活码长度
+  activate-try-frequency: 10 # 激活码重复的重新生成次数
+  enable-sound-rhythm: true # 启用声音律动（视频会议中的麦的声音律动）
+  enable-log-output: true # 启用日志输出
+  enable-others-log-output: true # 启用其他日志输出
+  enable-device-register-model-valid: false # 启用设备注册型号验证
